--- a/src/br/com/pousada/View/CadastroGeral.form
+++ b/src/br/com/pousada/View/CadastroGeral.form
@@ -146,8 +146,8 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="ImagemLogo" min="-2" pref="282" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jLabel19" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jLabel19" min="-2" pref="288" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
