--- a/src/br/com/pousada/View/JanelaPrincipal.form
+++ b/src/br/com/pousada/View/JanelaPrincipal.form
@@ -131,7 +131,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="ImagemLogo" min="-2" pref="300" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel5" min="-2" pref="298" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
