--- a/src/br/com/pousada/View/JanelaAplicacao.form
+++ b/src/br/com/pousada/View/JanelaAplicacao.form
@@ -156,7 +156,7 @@
                       <Component id="ImagemLogo" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabel19" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="jLabel19" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
